<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

    <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:id="@+id/main_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="-7dp"
            android:indeterminate="true"
            android:visibility="invisible"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            tools:visibility="visible"/>

    <TextView
            android:id="@+id/account_title"
            android:text="@string/cloud_account_title"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/main_progress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:gravity="start"
            android:textSize="20sp"
            android:maxLines="4"
            android:singleLine="false"/>

    <TextView
            android:id="@+id/account_message"
            android:text="@string/cloud_account_message"

            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/account_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:gravity="start"
            android:maxLines="4"
            android:singleLine="false"/>

    <TextView
            android:id="@+id/account_login_status_message"
            android:text="@string/cloud_account_login_status_message"

            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/account_message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:gravity="start"
            android:maxLines="4"
            android:singleLine="false"/>

    <TextView
            android:id="@+id/account_login_user_id_message"
            android:text="@string/cloud_account_login_user_id_message"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/account_login_status_message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:gravity="start"
            android:maxLines="4"
            android:singleLine="false"/>

    <Button
            android:id="@+id/account_sign_up_button"
            android:text="@string/cloud_account_sign_up_button"

            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/account_login_user_id_message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/account_log_in_button"

            android:background="@color/widgetColor"/>

    <Button
            android:id="@+id/account_log_in_button"
            android:text="@string/cloud_account_log_in_button"

            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/account_login_user_id_message"
            app:layout_constraintStart_toEndOf="@id/account_sign_up_button"
            app:layout_constraintEnd_toEndOf="parent"

            android:background="@color/widgetColor"/>

    <TextView
            android:id="@+id/cloud_title"
            android:text="@string/cloud_subscription_title"

            android:layout_marginTop="16dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/account_sign_up_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:gravity="start"
            android:textSize="20sp"
            android:maxLines="4"
            android:singleLine="false"/>

    <TextView
            android:id="@+id/cloud_message"
            android:text="@string/cloud_subscription_message"

            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cloud_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:gravity="start"
            android:maxLines="4"
            android:singleLine="false"/>

    <TextView
            android:id="@+id/cloud_subscription_status_message"
            android:text="@string/cloud_subscription_status_message"

            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cloud_message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:gravity="start"
            android:maxLines="4"
            android:singleLine="false"/>

    <TextView
            android:id="@+id/cloud_subscription_status"
            android:text="@string/cloud_subscription_status"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cloud_subscription_status_message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:gravity="start"
            android:maxLines="4"
            android:singleLine="false"/>

    <Button
            android:id="@+id/cloud_monthly_button"
            android:text="@string/cloud_subscription_monthly_button"

            android:layout_width="0dp"
            android:layout_height="72dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/cloud_subscription_status"
            app:layout_constraintBottom_toTopOf="@id/cloud_subscription_barrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cloud_yearly_button"

            android:background="@color/widgetColor"/>

    <Button
            android:id="@+id/cloud_yearly_button"
            android:text="@string/cloud_subscription_yearly_button"

            android:layout_width="0dp"
            android:layout_height="72dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/cloud_subscription_status"
            app:layout_constraintBottom_toTopOf="@id/cloud_subscription_barrier"
            app:layout_constraintStart_toEndOf="@id/cloud_monthly_button"
            app:layout_constraintEnd_toEndOf="parent"

            android:background="@color/widgetColor"/>

    <androidx.constraintlayout.widget.Barrier
            android:id="@+id/cloud_subscription_barrier"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:barrierDirection="top"/>

</androidx.constraintlayout.widget.ConstraintLayout>
