<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:id="@+id/main_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="-7dp"
            android:indeterminate="true"
            android:visibility="invisible"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            tools:visibility="visible"/>

    <TextView
            android:id="@+id/title_text"
            android:text="@string/calendar_settings_title"
            android:textSize="36sp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"

            app:layout_constraintTop_toBottomOf="@id/main_progress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="4dp"
            android:background="#808080"

            app:layout_constraintTop_toBottomOf="@id/title_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/start_view_spinner_text"
            android:text="@string/calendar_settings_select_start_view_text"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            app:layout_constraintTop_toBottomOf="@id/title_text"
            app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"

            android:id="@+id/start_view_spinner_layout"
            android:spinnerMode="dropdown"

            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            app:layout_constraintTop_toBottomOf="@id/start_view_spinner_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <AutoCompleteTextView
                android:id="@+id/start_view_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="#e0e0e0"

            app:layout_constraintTop_toBottomOf="@id/start_view_spinner_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/locales_spinner_text"
            android:text="@string/calendar_settings_select_locale_text"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            app:layout_constraintTop_toBottomOf="@id/start_view_spinner_layout"
            app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"

            android:id="@+id/locales_spinner_layout"
            android:spinnerMode="dropdown"

            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/locales_spinner_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <AutoCompleteTextView
                android:id="@+id/locales_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:completionThreshold="1"
                android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:id="@+id/calendar_first_day_of_the_week_text"
            android:text="@string/calendar_settings_first_day_of_the_week_text"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"

            app:layout_constraintTop_toBottomOf="@id/locales_spinner_layout"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/calendar_first_day_of_the_week_value"
            android:text="@string/calendar_settings_first_day_of_the_week_value"
            android:textSize="24sp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            app:layout_constraintTop_toBottomOf="@id/calendar_first_day_of_the_week_text"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/calendar_week_number_of_first_day_text"
            android:text="@string/calendar_settings_week_number_of_first_day_text"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            app:layout_constraintTop_toBottomOf="@id/calendar_first_day_of_the_week_value"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/calendar_week_number_of_first_day_value"
            android:text="@string/calendar_settings_week_number_of_first_day_value"
            android:textSize="24sp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            app:layout_constraintTop_toBottomOf="@id/calendar_week_number_of_first_day_text"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/calendar_week_number_of_last_day_text"
            android:text="@string/calendar_settings_week_number_of_last_day_text"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            app:layout_constraintTop_toBottomOf="@id/calendar_week_number_of_first_day_value"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/calendar_week_number_of_last_day_value"
            android:text="@string/calendar_settings_week_number_of_last_day_value"
            android:textSize="24sp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            app:layout_constraintTop_toBottomOf="@id/calendar_week_number_of_last_day_text"
            app:layout_constraintStart_toStartOf="parent"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="#e0e0e0"

            app:layout_constraintTop_toBottomOf="@id/calendar_week_number_of_last_day_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:id="@+id/button_backup"
            android:text="@string/calendar_settings_button_backup"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_pattern_sync"
            app:layout_constraintTop_toBottomOf="@+id/calendar_week_number_of_last_day_value"
            android:layout_marginTop="24dp"/>

    <Button
            android:id="@+id/button_pattern_sync"
            android:text="@string/calendar_settings_button_pattern_sync"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            app:layout_constraintStart_toEndOf="@id/button_backup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendar_week_number_of_last_day_value"
            android:layout_marginTop="24dp"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="#e0e0e0"

            app:layout_constraintTop_toBottomOf="@id/button_backup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:id="@+id/button_save"
            android:text="@string/calendar_settings_button_save"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_back"
            app:layout_constraintTop_toBottomOf="@+id/button_backup"
            android:layout_marginTop="24dp"/>

    <Button
            android:id="@+id/button_back"
            android:text="@string/calendar_settings_button_back"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toEndOf="@id/button_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_backup"
            android:layout_marginTop="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>